* add a timeout for stopping the vnc thread * show VNC error messages not only in the debug output, but also in messageboxes * do not save the VNC passwort in KWallet if the authentication did not succeeded * save the mainwindow state (toolbars, size, ...) * correct the debug area number and change a deprecated debug call

BUG: 149420

svn path=/trunk/KDE/kdenetwork/krdc/; revision=707273